--- a/Views/crearCuenta.pug
+++ b/Views/crearCuenta.pug
@@ -6,6 +6,7 @@ html(lang="en")
     body.login
         .contenedor-formulario
             h1 Crea tu cuenta
+            p Por ahora solo funciona con Gmail
 
             if locals.mensajes
                 .alertas
